@@ -2,6 +2,7 @@
 
 - fuzzy: need to account for kernel-level modified variables in .userspacesize
 - geoip: remove XT_ALIGN from .userspacesize when used with offsetof
+- add "STEAL" target
 
 
 Xtables-addons 1.13 (March 23 2009)
